fix widget area covering comments in mobile mode, fix unclosing div

--- a/style.css
+++ b/style.css
@@ -359,6 +359,7 @@ time:not(.published){
 }
 
 .widget-area {
+	position:static;
 	padding-top: 20px;
 }
 
